[package]
name = "nform"
version = "0.2.0"
authors = ["Ryan Plyler <g.r.plyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
hex = "0.4"
clap = "2.33.1"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
